# clade

./: .coveragerc  .gitignore  .travis.yml  README.md  README.rst  pytest.ini  setup.py
.github/workflows/: deploy.yml  test.yml  test_windows.yml  tinyconfig.yml
clade/: __init__.py  __main__.py  abstract.py  cmds.py  db.py  debugger.py  diff.py  envs.py  intercept.py  interface.py  libinterceptor.py  main.py  server.py  utils.py  wrapper.py
clade/extensions/: abstract.py  alternatives.py  ar.py  as.py  assembler.py  build_cmds.py  callgraph.py  calls_by_ptr.py  cc.py  cdb.py  cl.py  cmd_graph.py  common.py  common_info.py  compiler.py  cross_ref.py  cross_reference.py  cxx.py  execute.py  functions.py  info.aspect.tmpl  info.py  initializations.py  install.py  ld.py  link.py  linker.py  ln.py  macros.py  model.py  mv.py  objcopy.py  opts.py  path.py  pid_graph.py  presets.json  src_graph.py  storage.py  typedefs.py  used_in.py  (+3 more)
clade/extensions/info/: info.aspect  linux_kernel.aspect
clade/extensions/presets/: presets.json
clade/intercept/: CMakeLists.txt  data.c  data.h  debugger.cpp  interceptor.c  server.c  server.h  which.c  wrapper.c
clade/intercept/unix/: CMakeLists.txt  client.c  client.h  data.c  data.h  env.c  env.h  interceptor.c  lock.c  lock.h  wrapper.c
clade/intercept/windows/: CMakeLists.txt  client.cpp  client.h  debugger.cpp
clade/libinterceptor/: CMakeLists.txt  compat.h  data.c  data.h  env.c  env.h  interceptor.c  which.c  which.h  wrapper.c
clade/mirror/: manage.py
clade/mirror/cmds/: apps.py  models.py  urls.py  views.py
clade/mirror/cmds/static/cmds/css/: cmds.css  pid_graph.css  pid_graph_lazy.css  table.css
clade/mirror/cmds/static/cmds/js/: dndTree.js  drawGraph.js
clade/mirror/cmds/templates/cmds/: cmd.html  cmd_graph.html  cmds.html  pid_graph.html  pid_graph_lazy.html
clade/mirror/mirror/: settings.py  urls.py  wsgi.py
clade/scripts/: __init__.py  check.py  compilation_database.py  diff.py  file_graph.py  pid_graph.py  stats.py  tracer.py
clade/types/: nested_dict.py  path_tree.py
docs/: configuration.md  dev.md  extensions.md  scripts.md  troubleshooting.md  usage.md
tests/: conftest.py  test_abstract.py  test_ar.py  test_as.py  test_callgraph.py  test_calls_by_ptr.py  test_cc.py  test_cdb.py  test_cmd_graph.py  test_cmds.py  test_cross_ref.py  test_cxx.py  test_envs.py  test_extensions_utils.py  test_functions.py  test_info.py  test_intercept.py  test_interface.py  test_ld.py  test_ln.py  test_macros.py  test_main.py  test_objcopy.py  test_opts.py  test_path.py  test_path_tree.py  test_pid_graph.py  test_project.py  test_src_graph.py  test_storage.py  test_tracer.py  test_typedefs.py  test_used_in.py  test_utils.py  test_variables.py  test_windows.py
tests/test_project/: Makefile  main.c  test.py  zero.c
